/konum eklendi (GPS koordinatından MGM öncelikli, Open-Meteo yedekli hava durumu)
